--- a/category-desktop-support-os-windows-activators.html
+++ b/category-desktop-support-os-windows-activators.html
@@ -112,7 +112,7 @@ It is also known as the Office 2010 Toolkit and EZ-Activator over the internet. 
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 
@@ -173,7 +173,7 @@ KMS activation only lasts for 180 days after which, it must be activated again. 
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 
@@ -245,7 +245,7 @@ Activating Windows and Microsoft Office with Windows Loader<BR/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 
