--- a/category-desktop-support-utility-tools.html
+++ b/category-desktop-support-utility-tools.html
@@ -107,7 +107,7 @@ Windows 10 PRO x86/x64 ISO:
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 
@@ -175,7 +175,7 @@ Windows 8.1 Pro VL x64 ISO:
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 
@@ -241,7 +241,7 @@ Windows 7 PRO SP1 x64 ISO:
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 
@@ -311,7 +311,7 @@ Windows 7 SP1 All-In-One x86/x64 ISO:
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 
@@ -387,7 +387,7 @@ Kali Linux 2019.1 also includes updated packages for theHarvester, DBeaver, and 
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 
@@ -469,7 +469,7 @@ Linux Mint 19.1 - Xfce<br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 
@@ -528,7 +528,7 @@ Ubuntu 18.10 ISO:
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 
@@ -580,7 +580,7 @@ macOS Mojave DMG:
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 
@@ -635,7 +635,7 @@ Android Oreo ISO:
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 
@@ -734,7 +734,7 @@ It is also known as the Office 2010 Toolkit and EZ-Activator over the internet. 
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 
@@ -795,7 +795,7 @@ KMS activation only lasts for 180 days after which, it must be activated again. 
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 
@@ -867,7 +867,7 @@ Activating Windows and Microsoft Office with Windows Loader<BR/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 
@@ -933,7 +933,7 @@ It can be especially useful for cases where:<BR/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 
@@ -1000,7 +1000,7 @@ New Features Include: <BR/>Convert system disk between MBR and GPT styles. Windo
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 
@@ -1040,7 +1040,7 @@ Having problems with your DirectX setup? We provide DirectX offline installers f
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 
@@ -1148,7 +1148,7 @@ Having problems with your DirectX setup? We provide DirectX offline installers f
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 
@@ -1212,7 +1212,7 @@ Don't really know what can go wrong on the web? You don't have to. Chrome automa
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 
@@ -1281,7 +1281,7 @@ The best Firefox ever
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 
@@ -1334,7 +1334,7 @@ Malicious websites are blocked before harming the computer thanks to the SmartSc
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 
@@ -1409,7 +1409,7 @@ Since the browser was originally built for mobile devices, there is also a minia
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 
@@ -1475,7 +1475,7 @@ CSS rendering and 2D graphics load faster, while scrolling is smoother. HTML5 me
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 
@@ -1557,7 +1557,7 @@ Adobe Bundle include:
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 
@@ -1623,7 +1623,7 @@ Adobe Bundle include:
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 
@@ -1668,7 +1668,7 @@ KM Player 32/64bit:
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 
@@ -1731,7 +1731,7 @@ High compression ratio in 7z format with LZMA and LZMA2 compression<br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 
@@ -1784,7 +1784,7 @@ Notepad ++ 32/64bit:
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://www.facebook.com/officalevilgenius/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 
