--- a/category-windows-tricks-and-tips.html
+++ b/category-windows-tricks-and-tips.html
@@ -101,7 +101,7 @@
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 	 </p>
 
@@ -140,7 +140,7 @@
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul></p>
 
 	  </div>
@@ -197,7 +197,7 @@ it provides a more flexible disk partition principle.<br/><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 	 </p>
 
@@ -234,7 +234,7 @@ it provides a more flexible disk partition principle.<br/><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul></p>
 
 	  </div>
@@ -287,7 +287,7 @@ it provides a more flexible disk partition principle.<br/><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 	 </p>
 
@@ -328,7 +328,7 @@ it provides a more flexible disk partition principle.<br/><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul></p>
 
 	  </div>
@@ -379,7 +379,7 @@ it provides a more flexible disk partition principle.<br/><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 	 </p>
 
@@ -443,7 +443,7 @@ This way You can easily Update Intel HD Graphics Driver in Windows 7,8,10.
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul></p>
 
 	  </div>
@@ -490,7 +490,7 @@ Tips for Using Embed for SVG</br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 	 </p>
 
@@ -553,7 +553,7 @@ This way You can easily Update Intel HD Graphics Driver in Windows 7,8,10.
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul></p>
 
 	  </div>
@@ -601,7 +601,7 @@ Having problems with your DirectX setup? We provide DirectX offline installers f
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul></p>
 
 	  </div>
@@ -649,7 +649,7 @@ NB: For Educational Purpose<br/><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul></p>
 
 	  </div>
@@ -703,7 +703,7 @@ NB: For Educational Purpose<br/><br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul></p>
 
 	  </div>
