--- a/category-mobile-tech-how-to-tricks-and-tips.html
+++ b/category-mobile-tech-how-to-tricks-and-tips.html
@@ -89,7 +89,7 @@
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 	</p>
 
@@ -130,7 +130,7 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 
 </p>
@@ -172,7 +172,7 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 	
@@ -210,7 +210,7 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 	
@@ -267,7 +267,7 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 
 </p>
@@ -316,7 +316,7 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 
 </p>
@@ -362,7 +362,7 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 	
@@ -407,7 +407,7 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 	
@@ -476,7 +476,7 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 
 </p>
@@ -523,7 +523,7 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 	
@@ -559,7 +559,7 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 	
@@ -610,7 +610,7 @@ First Switch off the phone.<br/>
 <ul>
 <li>No Hacking - No Carding Tools - No Spams</li>
 <li/>Any feedback/queries: <a href="https://fb.me/theevilgeniux.0" target="_blank"><i class="fa fa-facebook"></i></a></li>
-<li>Dont forget to support GENIUX!</li>
+<li>Dont forget to support <b>Geniux</b></li>
 </ul>
 </p>
 	
