Updated my profile

--- a/Specialize-web-developers-online-coder-17-html-backrounds.html
+++ b/Specialize-web-developers-online-coder-17-html-backrounds.html
@@ -300,7 +300,7 @@ Here are the examples to set background pattern of a table −
 <div>
 <h2 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">About me</h2>
 <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
-My name is Evidence Maphutha, I am a young aspirant <i>Front-End Developer,</i> as well as an <i>IT Support Technician.</i><br/>
+My name is Evidence Maphutha, Young Aspirant UI & UX Designer/Developer, as well as an IT Support.<br/>
 Geniux is my idiom name given by my collegues as they believe I'm creative and multitalented. "I'm just interested in many things."
 I am cut above the rest because of my passion for the ICT industry and I believe that where passion leads, success is guranteed.   
 Accademically, I chose to 
