--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ I'm not Talented, I'm skilled.</p>
 <img src="images/icons/smartphone.png" class="img-fluid">
 </div>
 <div class="content">
-<h3>MOBILE TECH<br><span><a href="category-mobile-tech-support.html">Open <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<h3>MOBILE TECH<br><span><a href="category-mobile-tech-support.html">Mobile/Tablets <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="20px" height="15px" viewBox="0 0 459 459" style="enable-background:new 0 0 459 459;" xml:space="preserve">
 <g><g id="tab"><path d="M408,0H51C22.95,0,0,22.95,0,51v357c0,28.05,22.95,51,51,51h357c28.05,0,51-22.95,51-51V51C459,22.95,436.05,0,408,0z
 			 M408,408H51V51h178.5v102H408V408z"/></g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g>
@@ -129,7 +129,7 @@ I'm not Talented, I'm skilled.</p>
 <img src="images/icons/windows.png" class="img-fluid">
 </div>
 <div class="content">
-<h3>DESKTOP SUPPORT<br><span><a href="category-desktop-support.html">Open <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<h3>DESKTOP SUPPORT<br><span><a href="category-desktop-support.html">Computers <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="20px" height="15px" viewBox="0 0 459 459" style="enable-background:new 0 0 459 459;" xml:space="preserve">
 <g><g id="tab"><path d="M408,0H51C22.95,0,0,22.95,0,51v357c0,28.05,22.95,51,51,51h357c28.05,0,51-22.95,51-51V51C459,22.95,436.05,0,408,0z
 			 M408,408H51V51h178.5v102H408V408z"/></g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g>
@@ -147,7 +147,7 @@ I'm not Talented, I'm skilled.</p>
 <img src="images/lets-connect.png" class="img-fluid">
 </div>
 <div class="content">
-<h3>LET'S CONNECT<br><span><a href="lets-connect-my-social-medias.html">Open <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<h3>LET'S CONNECT<br><span><a href="lets-connect-my-social-medias.html">Discussion <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="20px" height="15px" viewBox="0 0 459 459" style="enable-background:new 0 0 459 459;" xml:space="preserve">
 <g><g id="tab"><path d="M408,0H51C22.95,0,0,22.95,0,51v357c0,28.05,22.95,51,51,51h357c28.05,0,51-22.95,51-51V51C459,22.95,436.05,0,408,0z
 			 M408,408H51V51h178.5v102H408V408z"/></g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g>
