--- a/lets-connect-my-social-medias.html
+++ b/lets-connect-my-social-medias.html
@@ -104,7 +104,7 @@
 <img src="images/icons/Github-icon.png" class="img-fluid">
 </div>
 <div class="content">
-<h3>GitHub<br><span><a href="https://github.com/theevilgeniux" class="specializes-url" target="_blank">EvilGeniux</a></span></h3>
+<h3>GitHub<br><span><a href="https://github.com/theevilgeniux" class="specializes-url" target="_blank">Geniux</a></span></h3>
 </div>
 </div>
 </div>
