--- a/category-mobile-tech-how-to-tricks-and-tips.html
+++ b/category-mobile-tech-how-to-tricks-and-tips.html
@@ -166,7 +166,7 @@ DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
 <BR/><BR/>Follow my steps carefully in order to succeed. 
 <BR/><BR/>
 DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
-<BR/>Go to myTutorial: <a href="https://youtu.be/wHJrp5ne_5A" target="_blank"><i class="fa fa-youtube-play"></i></a>
+<BR/>Go to myTutorial: <a href="https://youtu.be/lp-bYpmKPCA" target="_blank"><i class="fa fa-youtube-play"></i></a>
 		<br/><br>
 <b>Terms of Service</b><br/>
 <ul>
