--- a/category-mobile-tech-how-to-tricks-and-tips.html
+++ b/category-mobile-tech-how-to-tricks-and-tips.html
@@ -646,10 +646,11 @@ First Switch off the phone.<br/>
 	<div class="modal-body">
 	<center><img src="images/device-images/HuaweiY5-theevilgeniux.jpg" width="40%" class="img-modal"></center><br/>
     <p class="modal-h">Remove Previous Google Account on Huawei Y5 Lite (DRA-LX5) | FRP Bypass 2019 Method</p>
-    <p class="modal-p">I'm going to show you how you can remove Google Factory Reset Protection on Android 6.X.X |. This method works on All Huawei Varients,
-	<br/>This problem happens a lot if you have tried to hard-reset your mobile with combination keys. Or If the device is stolen.
+    <p class="modal-p">I'm going to show you how you can remove Google Factory Reset Protection on Android 6.X.X |. This Method can work on all Y5 varients.,
+	<br/>This problem happens a lot if you have tried to hard-reset your mobile with combination keys, If owner locked it remotely, Or it might reported as Stolen..
 <BR/><BR/>Follow my steps carefully in order to succeed. <BR/><BR/>
 DON'T TO FORGET TO SUBSCRIBE IF THIS TRICK WORKED FOR YOU!.
+
 <BR/>Go to myTutorial: <a href="https://youtu.be/78ccMd3uoMo" target="_blank"><i class="fa fa-youtube-play"></i></a>
 		<br/><br>
 <b>Terms of Service</b><br/>
